# chitie

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.sh
.cargo/: config.toml
src/: cli.rs  config.rs  findings.rs  lib.rs  main.rs  runner.rs
src/checks/: api_key_regex.rs  interesting_perms_files.rs  mod.rs  system_information.rs
src/checks/cloud/: detect.rs  mod.rs
src/checks/container/: am_i_contained.rs  breakout.rs  details.rs  docker_details.rs  mod.rs  mounted_tokens.rs  rw_bind_mounts.rs  tools.rs
src/checks/interesting_files/: backup_files.rs  database_files.rs  environment_variables.rs  executable_files.rs  hidden_files.rs  history_files.rs  log_analysis.rs  mail_files.rs  mod.rs  modified_last_5mins.rs  others_homes.rs  sensitive_files.rs  sh_files_in_path.rs  tmp_files.rs  tty_passwords.rs  unexpected_files.rs  web_files.rs  writable_log_files.rs
src/checks/interesting_perms_files/: acls.rs  apparmor.rs  capabilities.rs  cred_files.rs  group_writable_files.rs  ld_so.rs  mod.rs  others_files_in_my_dirs.rs  root_files_in_home.rs  root_paths.rs  root_readable_files.rs  sgid.rs  suid.rs  world_writable_files.rs
src/checks/network_information/: firewall.rs  hostname_dns.rs  inetdconf.rs  interfaces.rs  internet_access.rs  mod.rs  network_neighbours.rs  open_ports.rs  tcpdump.rs
src/output/: html.rs  json.rs  mod.rs  terminal.rs  xml.rs
src/utils/: command.rs  mod.rs
tests/: compare_outputs.py  compare_podman.sh  compare_results.sh  local_ci.config  local_ci.sh
tests/vulnerability-env/: Dockerfile
(+53 files in other folders)
